--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ allprojects {
         jcenter()
         
     }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }
 }
 
 task clean(type: Delete) {
